Fixed the scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -241,9 +241,9 @@ body {
   }
 }
 
-/* Tailwind */
+/* Modal scrollbar styles */
 .modal-scroll::-webkit-scrollbar {
-  width: 8px;
+  width: 0px !important;
 }
 
 .modal-scroll::-webkit-scrollbar-track {
